--- a/config/config.json
+++ b/config/config.json
@@ -1,16 +1,16 @@
 {
   "development": {
-    "username": "root",
-    "password": "password",
-    "database": "wishList_db",
-    "host": "localhost",
+    "username": "is4zsl5stjc2lywy",
+    "password": "gbgdxj5lyl6bwx8q",
+    "database": "cjghzixs0m3jfw2b",
+    "host": "m7wltxurw8d2n21q.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql"
   },
   "test": {
-    "username": "root",
-    "password": "password",
-    "database": "wishList_db",
-    "host": "localhost",
+    "username": "is4zsl5stjc2lywy",
+    "password": "gbgdxj5lyl6bwx8q",
+    "database": "cjghzixs0m3jfw2b",
+    "host": "m7wltxurw8d2n21q.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql",
     "logging": false
   },
