--- a/package.json
+++ b/package.json
@@ -7,15 +7,20 @@
     "test": "test"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
+    "connect-flash": "^0.1.1",
     "cross-env": "^5.2.0",
     "dotenv": "^8.0.0",
     "eslint": "^6.1.0",
     "eslint-config-prettier": "^6.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "express-session": "^1.16.2",
     "mysql2": "^1.6.5",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^5.14.0"
   },
   "devDependencies": {
